--- a/delivery/index.html
+++ b/delivery/index.html
@@ -55,7 +55,7 @@
     <script>
         $(document).ready(function() {
             $('.master-container').load("login");
-            log(listCookies());
+            log(cookies.listCookies());
         });
         load = function(folder) {
             $('.master-container').load(folder)
