--- a/delivery/orders/index.html
+++ b/delivery/orders/index.html
@@ -17,7 +17,7 @@
     })
 
     var load_order = function(order_id) {
-        setCookie("order_id", order_id);
+        cookies.setCookie("order_id", order_id);
         load('order');
     }
 </script>
