--- a/admin/customers/index.html
+++ b/admin/customers/index.html
@@ -18,8 +18,8 @@
 
     $(document).ready(function() {
         $(".alert").hide();
-        setCookie("cur_page", 0);
-        setCookie("rows_per_page", 10);
+        cookies.setCookie("cur_page", 0);
+        cookies.setCookie("rows_per_page", 10);
         adm_load_table('customers', true);
     });
 
