--- a/admin/delivery_rates/index.html
+++ b/admin/delivery_rates/index.html
@@ -64,8 +64,8 @@
 
     $(document).ready(function() {
         $(".alert").hide();
-        setCookie("cur_page", 0);
-        setCookie("rows_per_page", 10);
+        cookies.setCookie("cur_page", 0);
+        cookies.setCookie("rows_per_page", 10);
         adm_load_table('delivery_rates');
         load_dropdown("areas", false, true);
     });
