--- a/admin/shop_product/index.html
+++ b/admin/shop_product/index.html
@@ -83,8 +83,8 @@
 
     $(document).ready(function() {
         $(".alert").hide();
-        setCookie("cur_page", 0);
-        setCookie("rows_per_page", 10);
+        cookies.setCookie("cur_page", 0);
+        cookies.setCookie("rows_per_page", 10);
         adm_load_table('shop_product');
         load_dropdown("shops");
         load_dropdown("areas");
