Improve chat response by checking last message id sent

--- a/admin/index.html
+++ b/admin/index.html
@@ -143,6 +143,7 @@
     <script src="/libs/bootstrap/js/ie10-viewport-bug-workaround.js"></script>
     <script src="/js/cookies.min.js"></script>
     <script src="/js/common.min.js"></script>
+    <script src="/js/chat.min.js"></script>
     <script src="/js/ajax.min.js"></script>
     <script src="/js/admin.min.js"></script>
     <script src="/js/maps.min.js"></script>
