Update message at home screen

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <buton class="btn btn-xs btn-success">ORDER NOW</buton>
                 </li>
                 <li>Click on the <button class="btn btn-xs btn-danger">Basket</button> at the top of the page to checkout</li>
-                <li>Choose one of the delivery guys available in the same app</li>
+                <li>Stay in touch with our delivery man through our chat application</li>
                 <li>Rub your belly, the food is coming</li>
             </ul>
             <div class="form-group">
