--- a/delivery/order/index.html
+++ b/delivery/order/index.html
@@ -10,7 +10,7 @@
 </div>
 <script>
     $(document).ready(function() {
-        get_order();
+        delivery.get_order();
     });
 
     $('.go-back').on("click", function(e) {
