--- a/delivery/orders/index.html
+++ b/delivery/orders/index.html
@@ -8,7 +8,7 @@
 
 <script>
     $(document).ready(function() {
-        get_orders();
+        delivery.get_orders();
     });
 
     $('.go-back').on("click", function(e) {
