--- a/delivery/login/index.html
+++ b/delivery/login/index.html
@@ -177,6 +177,7 @@
 
 <script>
     // Get the modal
+    delivery.init();
     var modal = document.getElementById('id01');
     document.getElementById('id01').style.display = 'block';
     // When the user clicks anywhere outside of the modal, close it
@@ -188,6 +189,6 @@
 
     $(".modal-content").on("submit", function(e){
         e.preventDefault();
-        deliverer_login();
+        delivery.deliverer_login();
     })
 </script>
