Fix basket and alerts icon position

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <button class="btn btn-danger hidden" id="basket_button" type="button">Basket <span class="badge basket"></span>
                 </button>
         </div>
-        <button class="btn btn-info pull-left dashboard alerts-button" type="button">
+        <button class="btn btn-info pull-left alerts-button" type="button">
           <i class="glyphicon glyphicon-envelope"></i> <span class="badge unread-messsages"></span>
         </button>
 
