--- a/thanks/index.html
+++ b/thanks/index.html
@@ -24,7 +24,7 @@
     var zoom = 15;
 
     $(document).ready(function() {
-        $(".alert").hide();
+        chat.check_messages();
     });
 
     initialize = function() {
