--- a/chat/index.html
+++ b/chat/index.html
@@ -60,8 +60,9 @@
                                 <div class="form-group">
                                     <textarea class="form-control" id="chat-message" placeholder="Enter message..."></textarea>
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group chat-buttons-area">
                                     <button type="button" class="btn btn-danger pull-left back-button">Back</button>
+                                    <button type="button" class="btn btn-info map-button">Map</button>
                                     <button type="button" class="btn btn-default pull-right send-button">Send</button>
                                     <div class="clearfix"></div>
                                 </div>
@@ -89,14 +90,13 @@
         $('.back-button').on("click", function(e) {
             e.preventDefault();
             switch (cookies.getCookie("sender")) {
-                case "1":
-                    //location.href = "/admin";
+                case "1": // Admin
                     window.close();
                     break;
-                case "4":
+                case "4": // Delivery guy
                     location.href = "/delivery";
                     break;
-                default:
+                default: // Customer or Receiver
                     location.href = "/";
             }
         })
@@ -104,6 +104,12 @@
         $('.send-button').on("click", function(e) {
             e.preventDefault();
             chat.send_message($('#chat-message').val());
+        })
+
+        $('.map-button').on("click", function(e) {
+            e.preventDefault();
+            cookies.setCookie("show_map", 1);
+            location.href = "/";
         })
     </script>
 </body>
