--- a/thanks/index.html
+++ b/thanks/index.html
@@ -76,7 +76,7 @@
 
     $(".exit").on("click", function(e) {
         e.preventDefault();
-        $("#content").load(HOME);
+        $("#content").load(shop.HOME);
     });
 </script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAh_c5kk7g5ynpR6zwce2kEWXupyDIKL2Q&callback=initialize">
