--- a/basket/index.html
+++ b/basket/index.html
@@ -30,17 +30,17 @@
 <script>
     $(document).ready(function() {
         $(".alert").hide();
-        load_basket_products();
+        shop.load_basket_products();
     });
 
     $(".dismiss").on("click", function(e) {
         e.preventDefault();
-        removeAll();
+        shop.removeAll();
     });
 
     $(".exit").on("click", function(e) {
         e.preventDefault();
-        $("#content").load(HOME);
+        $("#content").load(shop.HOME);
     });
 
     $(".checkout").on("click", function(e) {
