--- a/chat/index.html
+++ b/chat/index.html
@@ -76,6 +76,7 @@
     </div>
     <script src="/libs/jquery/js/jquery.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/js/auth.min.js"></script>
     <script src="/js/common.min.js"></script>
     <script src="/js/cookies.min.js"></script>
     <script src="/js/ajax.min.js"></script>
