--- a/checkout/index.html
+++ b/checkout/index.html
@@ -89,7 +89,7 @@
     $(document).ready(function() {
         $("[id='copy_buyer']").bootstrapSwitch();
         $(".alert").hide();
-        restore_values();
+        shop.restore_values();
     });
 
     $(".cancel-action").on("click", function(d) {
@@ -119,7 +119,7 @@
 
     $("#profile-form").on("submit", function(d) {
         d.preventDefault();
-        store_values();
-        error = validate_form(this);
+        shop.store_values();
+        error = shop.validate_form(this);
     });
 </script>
