--- a/chat/index.html
+++ b/chat/index.html
@@ -90,7 +90,7 @@
             }
             chat.init();
             chat.get_messages();
-            log("cookies", cookies.listCookies());
+            common.log("cookies", cookies.listCookies());
         });
 
         $('.back-button').on("click", function(e) {
