--- a/delivery/login/index.html
+++ b/delivery/login/index.html
@@ -177,7 +177,8 @@
 
 <script>
     // Get the modal
-    delivery.init();
+
+    //cookies.deleteAllCookies();
     var modal = document.getElementById('id01');
     document.getElementById('id01').style.display = 'block';
     // When the user clicks anywhere outside of the modal, close it
