--- a/map/index.html
+++ b/map/index.html
@@ -87,7 +87,7 @@
             return false;
         }
         cookies.setCookie('shop-area-id', $('#item_id').val());
-        $("#content").load(HOME);
+        $("#content").load(shop.HOME);
     })
 </script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAh_c5kk7g5ynpR6zwce2kEWXupyDIKL2Q&callback=initialize">
