--- a/delivery/index.html
+++ b/delivery/index.html
@@ -26,6 +26,7 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
     <link href="/css/delivery.min.css" rel="stylesheet">
+    <link href="/css/maps.min.css" rel="stylesheet">
 </head>
 
 <body>
