Add push notification

--- a/admin/map/index.html
+++ b/admin/map/index.html
@@ -1,15 +1,16 @@
-
 <style>
-    .jumbotron{
+    .jumbotron {
         padding: 0;
         margin: 0;
     }
+
     #areaMap {
-      height: 500px;
-      margin: 0;
-      padding: 0;
+        height: 500px;
+        margin: 0;
+        padding: 0;
     }
-    .marker-data{
+
+    .marker-data {
         position: absolute;
         right: 100px;
         top: 80px;
@@ -18,75 +19,66 @@
     }
 </style>
 
-    <div id="areaMap"></div>
-    <div class="marker-data"></div>
+<div id="areaMap"></div>
+<div class="marker-data"></div>
 
-    <script>
-        var map;
-        var lat = 0;
-        var lng = 0;
-        var area_id = '';
-        var area_name = '';
-        var shop_id = '';
-        var shop_name = '';
-        var shops;
-        var deliverers;
-        var markers = [];
-        var infowindows = [];
-        var me_marker;
-        var zoom = 11;
+<script>
+    var map;
+    var lat = 0;
+    var lng = 0;
+    var area_id = '';
+    var area_name = '';
+    var shop_id = '';
+    var shop_name = '';
+    var shops;
+    var deliverers;
+    var markers = [];
+    var infowindows = [];
+    var me_marker;
+    var zoom = 11;
 
-        $(document).ready(function() {
-            $(".alert").hide();
-            /*
-            setInterval(function() {
-                relocateMap();
-            }, 60000);
-            */
-            setInterval(function() {
-                maps.update_markers();
-            }, 30000);
-        });
+    $(document).ready(function() {
 
-        update_markers = function(){
+    });
 
-            maps.remove_markers();
-            maps.load_shops_locations(0);
-            maps.load_deliverers_locations(0);
+    update_markers = function() {
+
+        maps.remove_markers();
+        maps.load_shops_locations(0);
+        maps.load_deliverers_locations(0);
+        setTimeout(function() {
+            update_markers();
+        }, 30000);
+    }
+
+    initialize = function() {
+
+        var myOptions = {
+            zoom: zoom,
+            mapTypeId: google.maps.MapTypeId.ROADMAP
         }
 
-        initialize = function () {
+        map = new google.maps.Map(document.getElementById("areaMap"), myOptions);
 
-            var myOptions = {
-                zoom: zoom,
-                mapTypeId: google.maps.MapTypeId.ROADMAP
-            }
-
-            map = new google.maps.Map(document.getElementById("areaMap"), myOptions);
-
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(function (position) {
-                    initialLocation = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-                });
-            }
-            var centerMap = new google.maps.LatLng(4.8156, 7.0498);
-            initialLocation = centerMap;
-            map.panTo(initialLocation);
-            /*
-            me_marker = new google.maps.Marker({
-                position: initialLocation,
-                map: map,
-                title: 'You are here'
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(function(position) {
+                initialLocation = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
             });
-            */
-
-            maps.load_shops_locations(0);
-            maps.load_deliverers_locations(0);
         }
+        var centerMap = new google.maps.LatLng(4.8156, 7.0498);
+        initialLocation = centerMap;
+        map.panTo(initialLocation);
+        /*
+        me_marker = new google.maps.Marker({
+            position: initialLocation,
+            map: map,
+            title: 'You are here'
+        });
+        */
 
+        update_markers();
+    }
+</script>
 
-
-    </script>
-
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAh_c5kk7g5ynpR6zwce2kEWXupyDIKL2Q&callback=initialize">
-    </script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAh_c5kk7g5ynpR6zwce2kEWXupyDIKL2Q&callback=initialize">
+</script>
