--- a/delivery/map/index.html
+++ b/delivery/map/index.html
@@ -78,6 +78,7 @@
             url: "/ws/br.php",
             data: data,
             success: function(data) {
+                common.log("get_deliverer_coordinates", data);
                 maps.setMarkers(data, 'name', '/img/fastfood-worker-24-255355.png');
                 var centerMap = new google.maps.LatLng(data[0].lat, data[0].lng);
                 map.panTo(centerMap);
